--- a/LAB3/Makefile
+++ b/LAB3/Makefile
@@ -1,9 +1,9 @@
 TARGET = server deliver
 
 all: ${TARGET}
-server: server.c
+server: server.c packet.h
 	gcc server.c -o server
-deliver: deliver.c
+deliver: deliver.c packet.h
 	gcc deliver.c -o deliver
 clean:  
 	rm -f ${TARGET}
